--- a/roles/m4e/templates/route.yaml.j2
+++ b/roles/m4e/templates/route.yaml.j2
@@ -1,12 +1,10 @@
+{% if route_name %}{% set metadata_name = route_name %}{% endif %}
+{% if route_annotations %}{% set annotations = route_annotations %}{% endif %}
 # {{ name }} route
 ---
 kind: Route
 apiVersion: v1
 {% include 'metadata.j2' ignore missing %}
-{% if route_annotations != false %}
-  annotations:
-    {{ route_annotations | indent( width=4) }}
-{%- endif -%}
 {% if route_spec != false %}
 spec:
   {{ route_spec | indent( width=2) }}
