moodle: config.php as a secret

--- a/roles/m4e/templates/secret.yaml.j2
+++ b/roles/m4e/templates/secret.yaml.j2
@@ -8,9 +8,9 @@ apiVersion: v1
 {% endif %}
 {% if secret_data != false %}
 data:
-  {{ secret_data | indent( width=2, indentfirst=True) }}
+  {{ secret_data | indent(width=2) }}
 {% endif %}
 {% if secret_string_data != false %}
 stringData:
-  {{ secret_string_data | indent( width=2) }}
+  {{ secret_string_data | indent(width=2) }}
 {% endif %}
