--- a/roles/m4e/templates/metadata.j2
+++ b/roles/m4e/templates/metadata.j2
@@ -3,7 +3,7 @@ metadata:
   namespace: '{{ meta.namespace }}'
   labels:
     app: '{{ metadata_app | default(metadata_name) | default(meta.name + '-' + name) }}'
-    app.kubernetes.io/name: '{{ name }}'
+    app.kubernetes.io/name: '{{ metadata_app | default(metadata_name) | default(meta.name + '-' + name) }}'
     app.kubernetes.io/instance: '{{ meta.name }}'
     app.kubernetes.io/part-of: moodle
     app.kubernetes.io/managed-by: ansible
