--- a/roles/m4e/templates/secret.yaml.j2
+++ b/roles/m4e/templates/secret.yaml.j2
@@ -3,14 +3,14 @@
 kind: Secret
 apiVersion: v1
 {% include 'metadata.j2' ignore missing %}
-{% if secret_type != false %}
+{% if secret_type | default(false) != false %}
     type: '{{ secret_type }}'
 {% endif %}
-{% if secret_data != false %}
+{% if secret_data | default(false) != false %}
 data:
   {{ secret_data | indent(width=2) }}
 {% endif %}
-{% if secret_string_data != false %}
+{% if secret_string_data | default(false) != false %}
 stringData:
   {{ secret_string_data | indent(width=2) }}
 {% endif %}
