--- a/roles/m4e/templates/php_fpm_deploy_spec.yaml.j2
+++ b/roles/m4e/templates/php_fpm_deploy_spec.yaml.j2
@@ -7,12 +7,12 @@ template:
   {{ metadata() | indent(width=2) }}
   spec:
     initContainers:
-{% if app_container %}
+{% if moodle_container %}
     - name: '{{ meta.name }}-moodle-app'
-      image: '{{ app_image }}'
+      image: '{{ moodle_image }}'
       # Shared volume with main container
       volumeMounts:
-      - mountPath: /var/www/html
+      - mountPath: {{ moodle_app }}
         name: moodle-app
 {% endif %}
     - name: '{{ meta.name }}-moodle-config'
@@ -20,13 +20,13 @@ template:
       command:
         - '/bin/sh'
         - '-c'
-        - 'test -f /var/www/html/config.php || cp -pL /config/config.php /var/www/html/config.php'
+        - 'test -f {{ moodle_app }}/config.php || cp -pL {{ moodle_config_path }}/config.php {{ moodle_app }}/config.php'
       volumeMounts:
-      - mountPath: /config
+      - mountPath: {{ moodle_config_path }}
         name: config-php
         readOnly: true
-{% if app_container %}
-      - mountPath: /var/www/html
+{% if moodle_container %}
+      - mountPath: {{ moodle_app }}
         name: moodle-app
 {% endif %}
     containers:
@@ -71,15 +71,15 @@ template:
 {% endif %}
 {% endif %}
       volumeMounts:
-      - mountPath: /var/moodledata
+      - mountPath: {{ moodle_data }}
         name: moodledata
-      - mountPath: /var/www/html
+      - mountPath: {{ moodle_app }}
         name: moodle-app
-      - mountPath: /var/www/html/config.php
+      - mountPath: {{ moodle_app }}/config.php
         name: config-php
         subPath: config.php
         readOnly: true
-      - mountPath: /config
+      - mountPath: {{ moodle_config_path }}
         name: config-php
         readOnly: true
     volumes:
