--- a/roles/m4e/templates/moodle_new_instance_job_spec.yaml.j2
+++ b/roles/m4e/templates/moodle_new_instance_job_spec.yaml.j2
@@ -1,11 +1,14 @@
 {% macro metadata() %}{% include 'metadata.j2' ignore missing %}{% endmacro %}
-replicas: {{ php_fpm_size }}
-selector:
-  matchLabels:
-    app: '{{ php_fpm_appname }}'
+completions: 1
+parallelism: 1
 template:
   {{ metadata() | indent(width=2) }}
   spec:
+    spec:
+      backoffLimit: 3
+      activeDeadlineSeconds: 180
+      # ttlSecondsAfterFinished: 60
+    restartPolicy: Never
     initContainers:
 {% if moodle_container %}
     - name: '{{ meta.name }}-moodle-app'
@@ -33,43 +36,31 @@ template:
     - image: '{{ php_fpm_image }}'
       name: '{{ php_fpm_appname }}'
       env:
-        - name: PHP_FPM_listen_allowed_clients
-          value: any
+      - name: PHP_FPM_listen_allowed_clients
+        value: any
+      - name: MOODLE_adminpass
+        valueFrom:
+          secretKeyRef:
+            name: {{ php_fpm_secret }}
+            key: moodle_new_instance_adminpass
+      command:
+        - '/bin/sh'
+        - '-c'
+        - |
+          /usr/libexec/check-container -d;
+          exit_code=$?;
+          if [ $exit_code -eq 2 ];
+          then
+            {{ moodle_new_instance_cmd }};
+          else
+            echo "Moodle not instantiated, exit code when checking database: '${exit_code}'";
+            exit 1;
+          fi
       ports:
       - containerPort: 9000
-{% if php_fpm_readiness_probe %}
       readinessProbe:
         exec:
-          command: {{ php_fpm_readiness_command }}
-        initialDelaySeconds: {{ php_fpm_readiness_initial }}
-        periodSeconds: {{ php_fpm_readiness_period }}
-        timeoutSeconds: {{ php_fpm_readiness_timeout }}
-        successThreshold: {{ php_fpm_readiness_success }}
-        failureThreshold: {{ php_fpm_readiness_failure }}
-{% endif %}
-{% if php_fpm_liveness_probe %}
-      livenessProbe:
-        exec:
-          command: {{ php_fpm_liveness_command }}
-        initialDelaySeconds: {{ php_fpm_liveness_initial }}
-        periodSeconds: {{ php_fpm_liveness_period }}
-        timeoutSeconds: {{ php_fpm_liveness_timeout }}
-        successThreshold: {{ php_fpm_liveness_success }}
-        failureThreshold: {{ php_fpm_liveness_failure }}
-{% endif %}
-{% if php_fpm_resource_requests or php_fpm_resource_limits %}
-      resources:
-{% if php_fpm_resource_requests %}
-        requests:
-          cpu: '{{ php_fpm_resource_requests_cpu }}'
-          memory: '{{ php_fpm_resource_requests_memory }}'
-{% endif %}
-{% if php_fpm_resource_limits %}
-        limits:
-          cpu: '{{ php_fpm_resource_limits_cpu }}'
-          memory: '{{ php_fpm_resource_limits_memory }}'
-{% endif %}
-{% endif %}
+          command: {{ moodle_new_instance_readiness_command }}
       volumeMounts:
       - mountPath: {{ moodle_data }}
         name: moodledata
