ingress: ingress added
It is the default ingress type instead route. Ingress type
is not compatible with expose_tls, only route

--- a/roles/m4e/templates/httpd_deploy_spec.yaml.j2
+++ b/roles/m4e/templates/httpd_deploy_spec.yaml.j2
@@ -25,7 +25,7 @@ template:
         - name: PHP_FPM_host
           value: '{{ php_fpm_service }}'
       ports:
-      - containerPort: 8080
+      - containerPort: {{ httpd_port }}
 {% if httpd_readiness_probe %}
       readinessProbe:
         exec:
