moodle: app added

--- a/roles/m4e/templates/moodle_cronjob_spec.yaml.j2
+++ b/roles/m4e/templates/moodle_cronjob_spec.yaml.j2
@@ -63,8 +63,8 @@ jobTemplate:
           emptyDir: {}
         - name: config-php
           secret:
-            secretName: '{{ php_fpm_secret }}'
+            secretName: '{{ moodle_secret }}'
             items:
-            - key: config_php
+            - key: config.php
               path: config.php
               mode: 0660
