--- a/roles/m4e/templates/php_fpm_deploy_spec.yaml.j2
+++ b/roles/m4e/templates/php_fpm_deploy_spec.yaml.j2
@@ -87,8 +87,8 @@ template:
       emptyDir: {}
     - name: config-php
       secret:
-        secretName: '{{ php_fpm_secret }}'
+        secretName: '{{ moodle_secret }}'
         items:
-        - key: config_php
+        - key: config.php
           path: config.php
           mode: 0660
