--- a/roles/m4e/templates/metadata.j2
+++ b/roles/m4e/templates/metadata.j2
@@ -11,13 +11,21 @@ metadata:
 {% if component | default(false) != false %}
     app.kubernetes.io/component: '{{ component }}'
 {% endif %}
+{% if runtime | default(false) != false %}
+    app.openshift.io/runtime: '{{ runtime }}'
+{% endif %}
 {% if extra_labels | default(false) != false %}
     {{ extra_labels | indent(width=4) }}
 {% endif %}
 {% if version | default(false) != false %}
     app.kubernetes.io/version: '{{ version }}'
 {% endif %}
-{% if annotations | default(false) != false %}
+{% if (annotations | default(false) != false) or (connects_to | default(false) != false) %}
   annotations:
+{% if annotations | default(false) != false %}
     {{ annotations | indent( width=4) }}
+{% endif %}
+{% if connects_to | default(false) != false %}
+    app.openshift.io/connects-to: '{{ connects_to }}'
+{% endif %}
 {% endif %}
