--- a/roles/m4e/templates/php_fpm_deploy_spec.yaml.j2
+++ b/roles/m4e/templates/php_fpm_deploy_spec.yaml.j2
@@ -7,26 +7,12 @@ template:
   {{ metadata() | indent(width=2) }}
   spec:
     terminationGracePeriodSeconds: {{ php_fpm_term_grace_period }}
+{% if moodle_app_container %}
     initContainers:
-{% if moodle_container %}
     - name: '{{ meta.name }}-moodle-app'
       image: '{{ moodle_image }}'
       # Shared volume with main container
       volumeMounts:
-      - mountPath: {{ moodle_app }}
-        name: moodle-app
-{% endif %}
-    - name: '{{ meta.name }}-moodle-config'
-      image: '{{ php_fpm_image }}'
-      command:
-        - '/bin/sh'
-        - '-c'
-        - 'test -f {{ moodle_app }}/config.php || cp -pL {{ moodle_config_path }}/config.php {{ moodle_app }}/config.php'
-      volumeMounts:
-      - mountPath: {{ moodle_config_path }}
-        name: config-php
-        readOnly: true
-{% if moodle_container %}
       - mountPath: {{ moodle_app }}
         name: moodle-app
 {% endif %}
@@ -38,6 +24,7 @@ template:
           value: any
       ports:
       - containerPort: 9000
+      args: {{ php_fpm_args }}
 {% if php_fpm_readiness_probe %}
       readinessProbe:
         exec:
@@ -74,17 +61,22 @@ template:
       volumeMounts:
       - mountPath: {{ moodle_data }}
         name: moodledata
+{% if moodle_app_container %}
       - mountPath: {{ moodle_app }}
         name: moodle-app
-      - mountPath: {{ moodle_config_path }}
+{% endif %}
+      - mountPath: '{{ moodle_app }}/config.php'
         name: config-php
+        subPath: config.php
         readOnly: true
     volumes:
     - name: moodledata
       persistentVolumeClaim:
         claimName: '{{ moodle_data_pvc }}'
+{% if moodle_app_container %}
     - name: moodle-app
       emptyDir: {}
+{% endif %}
     - name: config-php
       secret:
         secretName: '{{ moodle_secret }}'
