--- a/roles/m4e/templates/nginx_deploy_spec.yaml.j2
+++ b/roles/m4e/templates/nginx_deploy_spec.yaml.j2
@@ -9,7 +9,7 @@ template:
     terminationGracePeriodSeconds: {{ nginx_term_grace_period }}
 {% if moodle_app_container %}
     initContainers:
-    - name: '{{ meta.name }}-moodle-app'
+    - name: '{{ ansible_operator_meta.name }}-moodle-app'
       image: '{{ moodle_image }}'
       # Shared volume with main container
       volumeMounts:
