--- a/roles/m4e/templates/php_fpm_deploy_spec.yaml.j2
+++ b/roles/m4e/templates/php_fpm_deploy_spec.yaml.j2
@@ -9,7 +9,7 @@ template:
     terminationGracePeriodSeconds: {{ php_fpm_term_grace_period }}
 {% if moodle_app_container %}
     initContainers:
-    - name: '{{ meta.name }}-moodle-app'
+    - name: '{{ ansible_operator_meta.name }}-moodle-app'
       image: '{{ moodle_image }}'
       # Shared volume with main container
       volumeMounts:
@@ -84,4 +84,3 @@ template:
         items:
         - key: config.php
           path: config.php
-          mode: 0660
