feat: add resources option to moodle new instance job

--- a/roles/m4e/templates/moodle_new_instance_job_spec.yaml.j2
+++ b/roles/m4e/templates/moodle_new_instance_job_spec.yaml.j2
@@ -46,6 +46,19 @@ template:
       readinessProbe:
         exec:
           command: {{ moodle_new_instance_readiness_command }}
+{% if moodle_new_instance_resource_requests or moodle_new_instance_resource_limits %}
+      resources:
+{% if moodle_new_instance_resource_requests %}
+        requests:
+          cpu: '{{ moodle_new_instance_resource_requests_cpu }}'
+          memory: '{{ moodle_new_instance_resource_requests_memory }}'
+{% endif %}
+{% if moodle_new_instance_resource_limits %}
+        limits:
+          cpu: '{{ moodle_new_instance_resource_limits_cpu }}'
+          memory: '{{ moodle_new_instance_resource_limits_memory }}'
+{% endif %}
+{% endif %}
       volumeMounts:
       - mountPath: {{ moodle_data }}
         name: moodledata
