--- a/roles/m4e/templates/moodle_new_instance_job_spec.yaml.j2
+++ b/roles/m4e/templates/moodle_new_instance_job_spec.yaml.j2
@@ -32,6 +32,7 @@ template:
         - '/bin/sh'
         - '-c'
         - |
+          container-entrypoint echo "Instantiating moodle...";
           /usr/libexec/check-container-php -d;
           exit_code=$?;
           if [ $exit_code -eq 2 ];
