refactor: use args in moodle cron

--- a/roles/m4e/templates/moodle_cronjob_spec.yaml.j2
+++ b/roles/m4e/templates/moodle_cronjob_spec.yaml.j2
@@ -24,10 +24,7 @@ jobTemplate:
           env:
           - name: PHP_FPM_listen_allowed_clients
             value: any
-          command:
-            - '/bin/sh'
-            - '-c'
-            - '{{ moodle_cron_command }}'
+          args: {{ moodle_cron_args }}
           ports:
           - containerPort: 9000
           readinessProbe:
