--- a/roles/m4e/templates/nginx_deploy_spec.yaml.j2
+++ b/roles/m4e/templates/nginx_deploy_spec.yaml.j2
@@ -20,9 +20,9 @@ template:
     - image: '{{ nginx_image }}'
       name: '{{ nginx_appname }}'
       env:
-        - name: MOODLE_check_host
+        - name: MOODLE_CHECK_HOST
           value: '{{ nginx_host }}'
-        - name: PHP_FPM_host
+        - name: PHP_FPM_HOST
           value: '{{ php_fpm_service }}'
       ports:
       - containerPort: {{ nginx_port }}
