--- a/roles/m4e/templates/php_fpm_deploy_spec.yaml.j2
+++ b/roles/m4e/templates/php_fpm_deploy_spec.yaml.j2
@@ -20,9 +20,9 @@ template:
     - image: '{{ php_fpm_image }}'
       name: '{{ php_fpm_appname }}'
       env:
-        - name: PHP_FPM_listen_allowed_clients
+        - name: PHP_FPM_LISTEN_ALLOWED_CLIENTS
           value: any
-        - name: MOODLE_config_dir
+        - name: MOODLE_CONFIG_DIR
           value: '{{ moodle_config_path }}'
       ports:
       - containerPort: 9000
