fix(postgres): set strategy to recreate
Deployment strategy type 'Recreate' avoids  deadlock on recreate

--- a/roles/m4e/templates/postgres_deploy_spec.yaml.j2
+++ b/roles/m4e/templates/postgres_deploy_spec.yaml.j2
@@ -1,5 +1,7 @@
 {% macro metadata() %}{% include 'metadata.j2' ignore missing %}{% endmacro %}
 replicas: {{ postgres_size }}
+strategy:
+  type: Recreate
 selector:
   matchLabels:
     app: '{{ postgres_appname }}'
