refactor(postgres): set replica to 1

--- a/roles/m4e/templates/postgres_deploy_spec.yaml.j2
+++ b/roles/m4e/templates/postgres_deploy_spec.yaml.j2
@@ -1,5 +1,5 @@
 {% macro metadata() %}{% include 'metadata.j2' ignore missing %}{% endmacro %}
-replicas: {{ postgres_size }}
+replicas: 1
 strategy:
   type: Recreate
 selector:
