feat: add option to mount and run as user

--- a/roles/m4e/templates/moodle_cronjob_spec.yaml.j2
+++ b/roles/m4e/templates/moodle_cronjob_spec.yaml.j2
@@ -10,6 +10,11 @@ jobTemplate:
       {{ metadata() | indent(width=6) }}
       spec:
         restartPolicy: Never
+{% if php_fpm_security_context %}
+        securityContext:
+          runAsUser: {{ php_fpm_security_context_runasuser }}
+          fsGroup: {{ php_fpm_security_context_fsgroup }}
+{% endif %}
 {% if moodle_app_container %}
         initContainers:
         - name: '{{ ansible_operator_meta.name }}-moodle-app'
