--- a/roles/m4e/templates/nginx_deploy_spec.yaml.j2
+++ b/roles/m4e/templates/nginx_deploy_spec.yaml.j2
@@ -7,6 +7,11 @@ template:
   {{ metadata() | indent(width=2) }}
   spec:
     terminationGracePeriodSeconds: {{ nginx_term_grace_period }}
+{% if nginx_security_context %}
+    securityContext:
+      runAsUser: {{ nginx_security_context_runasuser }}
+      fsGroup: {{ nginx_security_context_fsgroup }}
+{% endif %}
 {% if moodle_app_container %}
     initContainers:
     - name: '{{ ansible_operator_meta.name }}-moodle-app'
