fix: add conditional for moodle_app in nginx deployment

--- a/roles/m4e/templates/nginx_deploy_spec.yaml.j2
+++ b/roles/m4e/templates/nginx_deploy_spec.yaml.j2
@@ -76,5 +76,7 @@ template:
     - name: moodledata
       persistentVolumeClaim:
         claimName: '{{ moodle_data_pvc }}'
+{% if moodle_app_container %}
     - name: moodle-app
       emptyDir: {}
+{% endif %}
