--- a/roles/m4e/templates/moodle_cronjob_spec.yaml.j2
+++ b/roles/m4e/templates/moodle_cronjob_spec.yaml.j2
@@ -30,6 +30,8 @@ jobTemplate:
           env:
           - name: PHP_FPM_LISTEN_ALLOWED_CLIENTS
             value: any
+          - name: PHP_FPM_PROCESS_CONTROL_TIMEOUT
+            value: '{{ php_fpm_process_control_timeout }}'
           args: {{ moodle_cron_args }}
           ports:
           - containerPort: 9000
