--- a/roles/m4e/templates/moodle_cronjob_spec.yaml.j2
+++ b/roles/m4e/templates/moodle_cronjob_spec.yaml.j2
@@ -17,7 +17,7 @@ jobTemplate:
 {% endif %}
 {% if moodle_app_container %}
         initContainers:
-        - name: '{{ ansible_operator_meta.name }}-moodle-app'
+        - name: '{{ meta_name }}-moodle-app'
           image: '{{ moodle_image }}'
           # Shared volume with main container
           volumeMounts:
