--- a/roles/m4e/templates/metadata.j2
+++ b/roles/m4e/templates/metadata.j2
@@ -7,7 +7,10 @@ metadata:
     app.kubernetes.io/name: '{{ metadata_app | default(metadata_name) | default(default_name) }}'
     app.kubernetes.io/instance: '{{ meta_name }}'
     app.kubernetes.io/part-of: moodle
-    app.kubernetes.io/managed-by: ansible
+    app.kubernetes.io/managed-by: m4e-operator
+{% if inventory_uuid | default(false) != false %}
+    {{ cr_group }}/inventory: '{{ inventory_uuid }}'
+{% endif %}
 {% if component | default(false) != false %}
     app.kubernetes.io/component: '{{ component }}'
 {% endif %}
@@ -17,15 +20,18 @@ metadata:
 {% if extra_labels | default(false) != false %}
     {{ extra_labels | indent(width=4) }}
 {% endif %}
-{% if version | default(false) != false %}
-    app.kubernetes.io/version: '{{ version }}'
+{% if cr_version | default(false) != false %}
+    app.kubernetes.io/version: '{{ cr_version }}'
 {% endif %}
-{% if (annotations | default(false) != false) or (connects_to | default(false) != false) %}
+{% if (annotations | default(false) != false) or (connects_to | default(false) != false) or (annotation_inventory_hostvars | default(false) != false)%}
   annotations:
 {% if annotations | default(false) != false %}
     {{ annotations | indent( width=4) }}
 {% endif %}
 {% if connects_to | default(false) != false %}
     app.openshift.io/connects-to: '{{ connects_to }}'
+{% endif %}
+{% if annotation_inventory_hostvars | default(false) != false %}
+    {{ cr_group }}/inventory_hostvars: '{{ annotation_inventory_hostvars | to_json | indent( width=4) }}'
 {% endif %}
 {% endif %}
