refactor: add container name variable

--- a/roles/m4e/templates/moodle_cronjob_spec.yaml.j2
+++ b/roles/m4e/templates/moodle_cronjob_spec.yaml.j2
@@ -26,7 +26,7 @@ jobTemplate:
 {% endif %}
         containers:
         - image: '{{ php_fpm_image }}'
-          name: '{{ php_fpm_appname }}'
+          name: '{{ moodle_cron_container_name }}'
           env:
           - name: PHP_FPM_LISTEN_ALLOWED_CLIENTS
             value: any
