--- a/roles/m4e/templates/moodle_new_instance_job_spec.yaml.j2
+++ b/roles/m4e/templates/moodle_new_instance_job_spec.yaml.j2
@@ -24,7 +24,7 @@ template:
 {% endif %}
     containers:
     - image: '{{ php_fpm_image }}'
-      name: '{{ php_fpm_appname }}'
+      name: '{{ moodle_new_instance_container_name }}'
       env:
       - name: PHP_FPM_LISTEN_ALLOWED_CLIENTS
         value: any
