--- a/roles/m4e/templates/nginx_deploy_spec.yaml.j2
+++ b/roles/m4e/templates/nginx_deploy_spec.yaml.j2
@@ -23,7 +23,7 @@ template:
 {% endif %}
     containers:
     - image: '{{ nginx_image }}'
-      name: '{{ nginx_appname }}'
+      name: '{{ nginx_container_name }}'
       env:
         - name: MOODLE_CHECK_HOST
           value: '{{ nginx_host }}'
