--- a/roles/m4e/templates/job/moodle-new-instance-spec.yaml.j2
+++ b/roles/m4e/templates/job/moodle-new-instance-spec.yaml.j2
@@ -15,7 +15,7 @@ template:
 {% endif %}
 {% if moodle_app_container %}
     initContainers:
-    - name: '{{ meta_name }}-moodle-app'
+    - name: 'moodle-app'
       image: '{{ moodle_image }}'
       # Shared volume with main container
       volumeMounts:
@@ -23,8 +23,8 @@ template:
         name: moodle-app
 {% endif %}
     containers:
-    - image: '{{ php_fpm_image }}'
-      name: '{{ moodle_new_instance_container_name }}'
+    - name: 'moodle-php-fpm-new-instance'
+      image: '{{ php_fpm_image }}'
       env:
       - name: PHP_FPM_LISTEN_ALLOWED_CLIENTS
         value: any
