refactor: use imagePullPolicy IfNotPresent in all deployments

--- a/roles/m4e/templates/cronjob/moodle-spec.yaml.j2
+++ b/roles/m4e/templates/cronjob/moodle-spec.yaml.j2
@@ -35,6 +35,7 @@ jobTemplate:
           args: {{ moodle_cron_args }}
           ports:
           - containerPort: 9000
+          imagePullPolicy: IfNotPresent
           readinessProbe:
             exec:
               command: {{ php_fpm_readiness_command }}
