--- a/roles/m4e/templates/job/moodle-new-instance-spec.yaml.j2
+++ b/roles/m4e/templates/job/moodle-new-instance-spec.yaml.j2
@@ -51,6 +51,7 @@ template:
           fi
       ports:
       - containerPort: 9000
+      imagePullPolicy: IfNotPresent
       readinessProbe:
         exec:
           command: {{ moodle_new_instance_readiness_command }}
