--- a/roles/m4e/templates/deploy/nginx-spec.yaml.j2
+++ b/roles/m4e/templates/deploy/nginx-spec.yaml.j2
@@ -31,6 +31,7 @@ template:
           value: '{{ php_fpm_service }}'
       ports:
       - containerPort: {{ nginx_port }}
+      imagePullPolicy: IfNotPresent
       args: {{ nginx_args }}
 {% if nginx_readiness_probe %}
       readinessProbe:
