--- a/roles/m4e/templates/deploy/postgres-spec.yaml.j2
+++ b/roles/m4e/templates/deploy/postgres-spec.yaml.j2
@@ -75,3 +75,7 @@ template:
     - name: postgres-data
       persistentVolumeClaim:
         claimName: '{{ postgres_pvc }}'
+{% if postgres_tolerations %}
+    tolerations:
+    {{ postgres_tolerations | to_nice_yaml(indent=2) | indent(4) }}
+{% endif %}
